Deck visible part 1 und issue description ist nicht mehr statisch

--- a/src/main/resources/css/planningpoker.css
+++ b/src/main/resources/css/planningpoker.css
@@ -26,3 +26,7 @@
 	list-style-type: none;
 	padding-right: 10px;
 }
+
+#buttonReveal {
+   margin-left: 20px;
+}
